separate between mandatory and bonus

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,5 @@
 {
     "files.associations": {
-<<<<<<< HEAD
-        "stdio.h": "c",
-        "cub.h": "c"
+        "cub3d.h": "c"
     }
-=======
-		"stdio.h": "c",
-		"cub3.h": "c",
-		"unistd.h": "c"
-	}
->>>>>>> c085637591b8f4450791199a6102a55475982708
 }
